...
                            <constraint firstItem="Fpl-wX-zGg" firstAttribute="top" secondItem="NbS-da-Chv" secondAttribute="bottom" id="G3c-pV-n6F"/>
                            <constraint firstItem="Fpl-wX-zGg" firstAttribute="leading" secondItem="Ypq-9k-T6F" secondAttribute="leading" id="JuB-tZ-Ftu"/>
                            <constraint firstAttribute="trailing" secondItem="Fpl-wX-zGg" secondAttribute="trailing" id="LDT-jA-zYr"/>
                            <constraint firstAttribute="bottom" secondItem="Fpl-wX-zGg" secondAttribute="bottom" id="m5t-95-W6r"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Archived People" leftItemsSupplementBackButton="YES" id="kdT-En-G26">
                        <leftBarButtonItems>
                            <barButtonItem width="15" style="done" id="dha-ZY-afa"/>
                            <barButtonItem id="7Nf-Sd-Zr6"/>
                        </leftBarButtonItems>
                        <barButtonItem key="rightBarButtonItem" width="15" style="done" id="45T-cD-17L"/>
                    </navigationItem>
...
